
## The '.' is to make sure install-data-hook rule is executed first
## Please keep sorted!
SUBDIRS = . \
	build-basic-autotools \
	class-gen \
	cvs-plugin \
	devhelp \
	dir-project \
	document-manager \
	file-loader \
	file-manager \
	file-wizard \
	gbf-am \
	gbf-mkfile \
	gdb \
	git \
	glade \
	js-debugger \
	language-manager \
	language-support-cpp-java \
	language-support-js \
	language-support-python \
	language-support-vala \
	message-view \
	patch \
	project-import \
	project-manager \
	project-wizard \
	python-loader \
	run-program \
	search \
	snippets-manager \
	sourceview \
	starter \
	subversion \
	symbol-db \
	tools

-include $(top_srcdir)/git.mk
