
## The '.' is to make sure install-data-hook rule is executed first
## Please keep sorted!
SUBDIRS = . \
	am-project \
	build-basic-autotools \
	class-gen \
	class-inheritance \
	code-analyzer \
	cvs-plugin \
	devhelp \
	debug-manager \
	dir-project \
	document-manager \
	file-loader \
	file-manager \
	file-wizard \
	gdb \
	git \
	glade \
	js-debugger \
	language-manager \
	language-support-cpp-java \
	language-support-js \
	language-support-python \
	language-support-vala \
	message-view \
	mk-project \
	patch \
	project-import \
	project-manager \
	project-wizard \
	python-loader \
	run-program \
	snippets-manager \
	sourceview \
	starter \
	subversion \
	symbol-db \
	terminal \
	tools

-include $(top_srcdir)/git.mk
