INCLUDES = \
	$(ANJUTA_CFLAGS)\
	-I$(top_srcdir)/src \
	-I$(srcdir)/../scintilla/include \
	-I$(srcdir)/../tagmanager/include \
	-I$(srcdir)/../widgets \
	-I$(srcdir)/../pixmaps \
	-I.. -I.

noinst_LIBRARIES = libanjutaprint.a
libanjutaprint_a_SOURCES = \
	print.c\
	print-doc.c\
	print-doc.h\
	print.h\
	print-util.c\
	print-util.h
