## Process this file with automake to produce Makefile.in

SUBDIRS = include

noinst_LIBRARIES = libscintilla.a

INCLUDES = -I$(srcdir)/include $(GTK_CFLAGS)

AM_CXXFLAGS = -DGTK -DSCI_LEXER -DUSE_XIM

libscintilla_a_SOURCES =\
	AutoComplete.cxx \
	CallTip.cxx \
	CellBuffer.cxx \
	ContractionState.cxx \
	Document.cxx \
	DocumentAccessor.cxx \
	Editor.cxx \
	Indicator.cxx \
	KeyMap.cxx \
	KeyWords.cxx \
	LexAda.cxx \
	LexAVE.cxx \
	LexBaan.cxx \
	LexBullant.cxx \
	LexCPP.cxx \
	LexConf.cxx \
	LexHTML.cxx \
	LexLua.cxx \
	LexOthers.cxx \
	LexPascal.cxx \
	LexPerl.cxx \
	LexPython.cxx \
	LexSQL.cxx \
	LexVB.cxx \
	LexCrontab.cxx\
	LexEiffel.cxx\
	LexLisp.cxx\
	LexRuby.cxx\
	LexMatlab.cxx\
	LineMarker.cxx \
	PlatGTK.cxx \
	PropSet.cxx \
	RESearch.cxx \
	ScintillaBase.cxx \
	ScintillaGTK.cxx \
	Style.cxx \
	StyleContext.cxx\
	UniConversion.cxx \
	ViewStyle.cxx \
	WindowAccessor.cxx \
	AutoComplete.h \
	CallTip.h \
	CellBuffer.h \
	ContractionState.h \
	Document.h \
	DocumentAccessor.h \
	Editor.h \
	Indicator.h \
	KeyMap.h \
	LineMarker.h \
	RESearch.h \
	SVector.h \
	ScintillaBase.h \
	Style.h \
	UniConversion.h \
	ViewStyle.h\
	StyleContext.h

